2012-07-02 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/EnetClient.cpp(EnetClient): fix build error because of 
	enet API changes.

	* src/ogreGui/WidgetList.hpp: prepend some STL types with std::.
	* src/interdep/GameEngine.hpp: prepend some STL types with std::.
	* src/ogreGui/Brush.hpp: prepend some STL types with std::.
	* src/common/GlobalUri.hpp: prepend some STL types with std::.

	* src/interdep/InputManager.hpp: remove OIS/ from several #include.
	* src/maincore/InputWrapper.hpp: remove OIS/ from several #include.
	* src/interdep/GameState.hpp: remove OIS/ from several #include.
	* src/interdep/GameEngine.hpp: remove OIS/ from several #include.

2012-06-30 Jérôme Pasquier  <rainbru@free.fr>

	* src/testHelpers/DummyRenderSystem.hpp: several new pure virtual
	functions overriden due to API changes in Ogre3D.

	* src/testHelpers/OgreMinimalSetup.cpp (debugRenderList): some changes
	due to API changes in Ogre3D (RenderSystemList switch to pointer
	to const reference).

2012-06-14 Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: check for the `bc' tool needed to ensure freetype
	version check.

2012-05-14 Jérôme Pasquier  <rainbru@free.fr>

	* src/server/: changed many includes to their CamelCased
	version. Build again.

	* src/tools/hashsum/: changed many includes to their CamelCased
	version. Build again.

	* src/tools/ftpclient/: changed many includes to their CamelCased
	version. Build again.

2012-05-10 Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/netflooder/: changed many includes to their CamelCased
	version. Build again.

	* src/editor/*.h: changed many includes to their CamelCased version.
	* src/design/: changed many includes to their CamelCased version.
	* src/editor/Makefile.am: prepend -I directories with src/.

2012-05-05 Jérôme Pasquier  <rainbru@free.fr>

	* src/design/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.

	* src/design/helpviewer.h|.cpp: CamelCased and header called hpp.