@@ -359,6 +359,7 @@ name, date, heure, gamestate, position, name perso, name server, versions
     improvment until new client is buildable.
     see http://rainbrurpg.sourceforge.net/wiki/bin/view/Concept/NewProjectLayout
 **** TODO Rebuild with Ogre 1.7.4 and changed dependencies
+     CLOCK: [2012-10-21 dim. 11:10]--[2012-10-21 dim. 11:21] =>  0:11
      CLOCK: [2012-07-02 lun. 16:35]--[2012-07-02 lun. 17:19] =>  0:44
 - [X] ois include dir is now ois/
   Must remove OIS/ form some #include directives
