@@ -1,6 +1,12 @@
+2012-10-21 Jérôme Pasquier  <rainbru@free.fr>
+
+	* m4/rb_ogre.m4 (RB_CHECK_OGREMAIN): check for a range of Ogre3D 
+	version (OGRE >= 1.6.0 OGRE < 1.8.0).
+	* acinclude.m4: move RB_CHECK_OGREMAIN to its own m4/ file.
+
 2012-07-02 Jérôme Pasquier  <rainbru@free.fr>
 
-	* src/common/EnetClient.cpp(EnetClient): fix build error because of 
+	* src/common/EnetClient.cpp(EnetClient): fix build error because of
 	enet API changes.
 
 	* src/ogreGui/WidgetList.hpp: prepend some STL types with std::.
